<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:id="@+id/help_gridlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/accept_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="0"
            android:background="@drawable/icon_accept"/>

        <TextView
            android:id="@+id/accept_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/help_accept"/>

        <ImageView
            android:id="@+id/pictocreator_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/giraf_app_icon_picto_creator"/>

        <TextView
            android:id="@+id/pictocreator_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_column="1"
            android:text="@string/help_pictocreater"/>

        <ImageView
            android:id="@+id/categoryTool_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="0"
            android:background="@drawable/giraf_app_icon_category_tool"/>

        <TextView
            android:id="@+id/categoryTool_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/help_cat_tool"/>

        <ImageView
            android:id="@+id/categoryIndicator_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/icon_category"/>

        <TextView
            android:id="@+id/categoryIndicator_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/help_cat_indicator"/>

        <ImageView
            android:id="@+id/spinner_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="0"
            android:background="@drawable/icon_arrow_down"/>

        <TextView
            android:id="@+id/spinner_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="4"
            android:layout_column="1"
            android:text="@string/help_spinner"/>

    </GridLayout>


</LinearLayout>