<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:id="@+id/mainLinearLayout"
    tools:context="dk.aau.cs.giraf.pictosearch.PictoAdminMain"
    android:orientation="horizontal"
    android:background="@color/giraf_background"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.13"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/checkoutSum"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/border_square">

        <TextView
            android:id="@+id/categorySum"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/category_colon"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:layout_row="0"
            android:layout_column="0"/>

        <TextView
            android:id="@+id/pictogramSum"
            android:layout_width="match_parent"
            android:layout_height="23dp"
            android:text="@string/pictogram_colon"
            android:textSize="15sp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:layout_row="1"
            android:layout_column="0"/>

        </GridLayout>


        <GridView
            android:id="@+id/checkout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/giraf_sidebar_background">
        </GridView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="50dp">

            <GridLayout
                android:layout_width="400dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="7dp">

                <TextView
                    android:id="@+id/is_single_or_not"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="15sp"
                    android:layout_row="0"
                    android:layout_column="0"/>

                <TextView
                    android:id="@+id/search_summary_count"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:textSize="15sp"
                    android:layout_row="1"
                    android:layout_column="0"/>
            </GridLayout>

            <LinearLayout
                android:id="@+id/search_box"
                android:layout_marginLeft="7dp"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:background="@drawable/border_square"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:layout_gravity="bottom|right">

            <EditText
                android:id="@+id/text_search_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight=".90"
                android:hint="@string/search"
                android:textColorHint="@android:color/darker_gray"
                android:inputType="text"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                android:imeOptions="actionSearch">
            </EditText>

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight=".10"
                android:layout_gravity="center"
                android:id="@+id/clear_search_field"
                android:background="@drawable/icon_cancel"
                android:layout_marginRight="5dp"
                android:contentDescription="@string/clear_button_description" />

            </LinearLayout>

            <dk.aau.cs.giraf.gui.GirafButton
                android:id="@+id/search_button"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="2dp"
                android:layout_width="50dp"
                android:layout_height="50dp"
                app:icon="@drawable/icon_search"
                android:layout_gravity="bottom|right"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/giraf_background">

            <RelativeLayout
                android:id="@+id/relative_pictogrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <GridView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/pictogram_displayer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:numColumns="5"
            android:stretchMode="columnWidth">

            </GridView>

            <TextView
                android:id="@+id/empty_search_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/search_to_find"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:layout_gravity="center"
                android:textColor="@color/giraf_text"
                android:textStyle="bold"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:background="@color/giraf_bar_gradient_end"
                android:layout_margin="0dp"
                android:padding="@dimen/text_padding" />



            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>



</LinearLayout>
